<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d7e7ff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d7e7ff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#e60072" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/currLocation" />

                <TextView
                    android:id="@+id/currLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customLocation" />
        </RadioGroup>

        <EditText
            android:id="@+id/searchLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/searchHint"
            android:visibility="gone" >
        </EditText>

        <Button
            android:id="@+id/loggedHouseSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/home_search_custom"
            android:drawableLeft="@drawable/house_search"
            android:gravity="center"
            android:text="@string/hSearch"
            android:textColor="#fff" />

        <Button
            android:id="@+id/loggedPeopleSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/people_search_custom"
            android:drawableLeft="@drawable/user_search"
            android:gravity="center"
            android:text="@string/pSearch"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>